# trading_bot

./: .env.example  .gitignore  EXAMPLES.md  README.md  cli.py  pyproject.toml
.github/workflows/: test.yml
bot/: __init__.py  client.py  logging_config.py  orders.py  validators.py
demo/: EXAMPLES.md
tests/: README.md  __init__.py  conftest.py  test_bot.py  test_cli.py  test_client.py  test_orders.py  test_validators.py
tests/integration/: __init__.py  conftest.py  test_real_orders.py
tests/unit/: __init__.py  test_cli.py  test_validators.py
